#456 time and version in generated files Tidy up ready for 4.3